@@ -96,7 +96,7 @@ if (isset($config['cacti_version'])) {
 }
 
 /* Should we allow proxy ip headers? */
-$config['proxy_headers'] = (isset($proxy_headers) ? $proxy_headers : null);
+$config['proxy_headers'] = (isset($proxy_headers) ? $proxy_headers : []);
 
 /* Set the poller_id */
 if (isset($poller_id)) {
@@ -255,6 +255,22 @@ if (!isset($resource_path)) {
 
 if (isset($input_whitelist)) {
 	$config['input_whitelist'] = $input_whitelist;
+}
+
+if (isset($i18n_handler)) {
+	$config['i18n_language_handler'] = $i18n_handler;
+}
+
+if (isset($i18n_force_language)) {
+	$config['i18n_force_language'] = $i18n_force_language;
+}
+
+if (isset($i18n_log)) {
+	$config['i18n_log'] = $i18n_log;
+}
+
+if (isset($i18n_text_log)) {
+	$config['i18n_text_log'] = $i18n_text_log;
 }
 
 /* include base modules */
@@ -613,4 +629,3 @@ api_plugin_hook('config_insert');
 
 /* set config cacti_version for plugins */
 $config['cacti_version'] = CACTI_VERSION;
-
