@@ -12,6 +12,7 @@ Cacti CHANGELOG
 -issue#5145: Changing SNMP settings to None leaves Bulk Walk Maximum Repititions visible
 -issue#5147: Error 500 on apache when changing languages
 -issue#5155: Local Linux Machine Device Package Damaged
+-issue#5160: Translations on debian 'Bullseye' systems may cause server errors
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
